--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
     />
 
+    <link href="https://fonts.googleapis.com/css2?family=Sarina&display=swap" rel="stylesheet"/>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
